# Parallel-random-forest

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  SCOPE.md  TODO  benchmarks.md  gen_report.tex  report.md  visualize.py
benchmarks/: about_dataset.md  about_machine.md  test1_100trees.md  test2.md  test3.md  test4_10trees.md  test5_2trees.md  test6_200trees.md  test7_varyingSamples.md
dataset/: test.csv
include/: benchmark.hpp  decision_tree.h  decision_tree.hpp  loaders.h  loaders.hpp  metrics.hpp  progress.hpp  random_forest.hpp
src/: benchmark.cpp  decision_tree.cpp  loaders.cpp  main.cpp  metrics.cpp  progress.cpp  random_forest.cpp
